<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>uk.ac.bristol</groupId>
  <artifactId>ghgui</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>ghgui</name>
  <url>https://github.com/spe-uob/2022-GHGUI</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>

    <openjfx.version>19</openjfx.version>
    <jgit.version>6.3.0.202209071007-r</jgit.version>
    <guava.version>31.1-jre</guava.version>
    <slf4j.version>2.0.3</slf4j.version>
    <lombok.version>1.18.24</lombok.version>
    <log4j-slf4j-impl.version>2.19.0</log4j-slf4j-impl.version>
  </properties>

  <repositories>
    <repository>
      <id>jgit-repository</id>
      <url>https://repo.eclipse.org/content/groups/releases/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit</artifactId>
      <version>${jgit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${openjfx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${openjfx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>${log4j-slf4j-impl.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.10.1</version>
          <configuration>
            <compilerArgs>
              <arg>--add-exports</arg>
              <arg>javafx.graphics/com.sun.glass.ui=com.andrei</arg>
            </compilerArgs>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-maven-plugin</artifactId>
          <version>0.0.8</version>
          <configuration>
            <stripDebug>true</stripDebug>
            <compress>2</compress>
            <noHeaderFiles>true</noHeaderFiles>
            <noManPages>true</noManPages>
            <launcher>ghgui</launcher>
            <jlinkImageName>ghgui</jlinkImageName>
            <jlinkZipName>ghgui</jlinkZipName>
            <mainClass>uk.ac.bristol/uk.ac.bristol.App</mainClass>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.panteleyev</groupId>
          <artifactId>jpackage-maven-plugin</artifactId>
          <version>1.5.2</version>
          <configuration>
            <name>ghgui</name>
            <appVersion>${project.version}</appVersion>
            <vendor>uk.ac.bristol</vendor>
            <destination>target/dist</destination>
            <module>uk.ac.bristol/App</module>
            <runtimeImage>target/ghgui</runtimeImage>
            <linuxShortcut>true</linuxShortcut>
            <linuxPackageName>ghgui</linuxPackageName>
            <linuxAppCategory>Utilities</linuxAppCategory>
            <linuxMenuGroup>Utilities</linuxMenuGroup>
            <javaOptions>
              <option>-Dfile.encoding=UTF-8</option>
            </javaOptions>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.gluonhq</groupId>
          <artifactId>gluonfx-maven-plugin</artifactId>
          <version>1.0.15</version>
          <configuration>
            <mainClass>uk.ac.bristol.App</mainClass>
            <bundlesList>
              <item>
                org.eclipse.jgit.internal.JGitText
              </item>
            </bundlesList>
            <reflectionList>
              <item>javafx.scene.control.Menu</item>
              <item>javafx.scene.control.MenuItem</item>
              <item>javafx.scene.control.MenuBar</item>
              <item>javafx.scene.text.Text</item>
              <item>javafx.scene.layout.GridPane</item>
              <item>uk.ac.bristol.controllers.MainController</item>
              <item>uk.ac.bristol.controllers.TabController</item>
              <item>org.eclipse.jgit.internal.JGitText</item>
            </reflectionList>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-wrapper-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>